nginx/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-dep
  namespace: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: nginx-pod
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: satyam120/my-custom:1.0
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/www/html
          name: nginx-storage
      volumes:
      - name: nginx-storage
        persistentVolumeClaim:
          claimName: nginx-pvc
      restartPolicy: Always
