nginx/pod.yml
kind: Pod
apiVersion: v1
metadata:
  name: nginx-pod
  namespace: nginx
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
      - containerPort: 80
      resources:
        requests:
          memory: "100Mi"
          cpu: "12Mi"
        limits:
          memory: "200Mi"
          cpu: "25Mi"
